--- a/src/assets/Home.css
+++ b/src/assets/Home.css
@@ -1,10 +1,13 @@
 body {
     margin: 0;
     scroll-behavior: smooth;
+    font-family: 'Poppins', sans-serif;
     overflow-x: hidden;
-    background-color: #000;
+    /* background-color: #000; */
   }
-  
+  h1,h2{
+    font-weight: bolder;
+  }
   .page-scroller-info {
     position: fixed;
     z-index: 99;
@@ -52,12 +55,7 @@ body {
   }
   
 @import url(https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css);
-@import url("https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500;600;700;800;900&display=swap");
 
-body {
-   
-    font-family: "Rubik", sans-serif;
-}
 /* ---Sidebar css */
 .text-primary{
   color: #5a8dee!important;
@@ -76,7 +74,7 @@ body {
   position: -webkit-sticky;
   top: 0;
   left: 0;
-   z-index: 1; 
+   z-index: 99; 
   background: #000;
 }
 .sidebar {
@@ -87,7 +85,7 @@ body {
   position: fixed;
   top: 0;
   right: -100%;
-  z-index: 1;
+  z-index: 99;
   transition: 0.5s;
   padding: 5px 30px;
 }
@@ -156,6 +154,16 @@ button.btn.btn-contact {
   border: none;
   border-radius: 24px;
   margin-right: 20px;
+ 
+}
+.item-btn-black
+{
+  background: #000 !important;
+  color: #fff;
+  border: none;
+  border-radius: 24px;
+  padding: 5px 15px;
+  
 }
 .section
 {
@@ -406,4 +414,149 @@ select::-ms-expand { display:none; }
   border: 0;
   opacity: 1;
   font-size: 30px;
+}
+/* -----------------------blog page css---------------------- */
+.full-blog-wrapper
+{
+  position:relative;
+  top: 55px;
+   
+}
+.bolg-bg
+{
+  left: 0px;
+    width: 55%;
+    overflow: hidden;
+    height: 600px;
+    position: absolute;
+    
+}
+.bolg-bg:before {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #000;
+  /* opacity: .90; */
+ 
+}
+.blog-slider
+{
+  position: relative;
+  left: 8%;
+}
+.blog-slider.owl-carousel .owl-item img {
+  display: block;
+  width: 100%;
+  height: 430px;
+  object-fit: cover;
+}
+.item-content {
+  width: 80%;
+  padding-top: 20px;
+}
+.item-content a {
+  color: #fff;
+}
+span.badge.bg-secondary.text-white {
+  background: transparent !important;
+  border: 1px solid;
+}
+.blog-slider.owl-theme .owl-nav {
+  margin-top: -30px;
+  text-align: right;
+  right: 15%;
+  position: relative;
+  -webkit-tap-highlight-color: transparent;
+}
+button.owl-prev span,button.owl-next span {
+  font-size: 40px;
+}
+.owl-carousel .owl-nav button.owl-prev, .owl-carousel .owl-nav button.owl-next, .owl-carousel button.owl-dot {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0 !important;
+  font: inherit;
+  width: 85px;
+}
+.blog-slider .owl-dots {
+  display: none;
+}
+.block-list li{
+  list-style-type: none;
+  display: flex;
+}
+.block-list .item-img img{
+  width: 150px;
+  height: 127px;
+  object-fit: cover;
+}
+.popularblog-content
+{
+  padding-left: 10px;
+}
+.widget-catogory ul li {
+  position: relative;
+  border-bottom: 1px solid #e8e8e8;
+  list-style-type: none;
+}
+.widget-catogory ul li a {
+  position: relative;
+  display: block;
+  color: #646464;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-right: 30px;
+  font-size: 15px;
+  text-align: left;
+  -webkit-transition: all 0.5s ease-out;
+  -moz-transition: all 0.5s ease-out;
+  -ms-transition: all 0.5s ease-out;
+  -o-transition: all 0.5s ease-out;
+  transition: all 0.5s ease-out;
+}
+.portfolio-div
+{
+  background-color: #000;
+  position: relative;
+  top: 55px;
+  color: #fff;
+}
+.mt--200
+{
+  margin-top: 200px;
+}
+.FLYVIRGA
+{
+  padding-bottom: 80px;
+}
+.FLYVIRGA p {
+  font-size: 14px;
+}
+.new_product {
+  overflow: hidden;
+}
+.image_product {
+  position: relative;
+}
+.new_product img {
+  transition: 0.5s all ease-in-out;
+}
+.description_product {
+  background: transparent;
+  background: linear-gradient(to bottom, transparent, #000);
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  line-height: 1;
+  top: 20%;
+  text-align: center;
+  width: 100%;
+}
+.new_product:hover {
+  transform: scale(1.1);
+  transition: 0.5s all ease-in-out;
+  z-index: 9;
+  position: relative;
 }
